# ten

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
.cmake/api/v1/reply/: cache-v2-e7309d7761edf8241132.json  cmakeFiles-v1-d61a8d09d42b3fa31007.json  codemodel-v2-6bffab146f1d5f545623.json  index-2026-04-04T04-40-42-0231.json  target-ten-Debug-16d47e644d1ff84f2f63.json  target-ten_tests-Debug-64ac8d093a944bd617ec.json
src/: compiled_kernel.h  flags.h  main.cc  ten.h  tensor.h
src/builder/: builder.cc  builder.h
src/codegen/: c_backend.cc  c_backend.h  lower.cc  lower.h  tree.h
src/ir/: ir.h  lower.cc
src/runtime/: runtime.cc  runtime.h
src/scheduler/: fuse_index.cc  index.cc  reorder_index.cc  scheduler.h  tile_index.cc
tenc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tenc
tenc/src/: compiled_kernel.h  main.cc  main.cpp  opgraph.h  opgraph.hpp  ten.hpp  tensor.h  tensor.hpp  test.txt  types.h
tenc/src/builder/: builder.cc  builder.h  builder.hpp  opgraph.hpp
tenc/src/codegen/: c_backend.cc  c_backend.h  lower.cc  lower.h  tree.h
tenc/src/ir/: ir.h  ir.hpp  lower.cc  lower.h  lower.hpp
tenc/src/runtime/: runtime.cc
tests/: mm_ba_rl.h  test.cc  tiling.h
tests/digits/: digits.h  digits.py
